Project

General

Profile

Actions

Bug #39286

closed

primary recovery local missing object did not update obc

Added by Zengran Zhang about 5 years ago. Updated over 4 years ago.

Status:
Resolved
Priority:
High
Assignee:
-
Category:
-
Target version:
-
% Done:

0%

Source:
Tags:
Backport:
Regression:
Yes
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Component(RADOS):
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

If not, the snapset in local obc may inconsistent, then the make_writeable()
will make mistakes..


Related issues 1 (0 open1 closed)

Related to RADOS - Bug #41517: Missing head object at primary with snapshots crashes primaryResolvedDavid Zafman08/26/2019

Actions
Actions #1

Updated by Greg Farnum about 5 years ago

  • Project changed from Ceph to RADOS
Actions #2

Updated by Neha Ojha about 5 years ago

  • Status changed from New to Fix Under Review
Actions #3

Updated by Greg Farnum about 5 years ago

  • Pull request ID set to 27575
Actions #4

Updated by Neha Ojha almost 5 years ago

  • Priority changed from Immediate to High
Actions #5

Updated by Greg Farnum over 4 years ago

  • Status changed from Fix Under Review to Pending Backport
  • Backport set to luminous, mimic, nautilus
Actions #9

Updated by Neha Ojha over 4 years ago

https://tracker.ceph.com/issues/41517 is a follow on fix for this.

Actions #10

Updated by Nathan Cutler over 4 years ago

  • Related to Bug #41517: Missing head object at primary with snapshots crashes primary added
Actions #11

Updated by Nathan Cutler over 4 years ago

  • Status changed from Pending Backport to Resolved
  • Backport deleted (luminous, mimic, nautilus)

Since this introduced a regression in master, I propose to refrain from backporting it separately, but instead backport it together with the follow-on fix #41517 - I'm updating that issue to the same effect.

Actions #12

Updated by Nathan Cutler over 4 years ago

Backports to luminous, mimic, and nautilus are being handled via #41517

Actions #13

Updated by Nathan Cutler over 4 years ago

  • Regression changed from No to Yes
Actions

Also available in: Atom PDF