osd: avoid prep_object_replica_pushes() on clone object when head missing

the leak path:
maybe_kick_recovery() -> prep_object_replica_pushes()

Fixes: http://tracker.ceph.com/issues/39286

Signed-off-by: Zengran Zhang <zhangzengran@sangfor.com.cn>
(cherry picked from commit 1cc239820891c7ecd9592529b8ee77f97571765c)